--- a/menu.html
+++ b/menu.html
@@ -82,10 +82,10 @@
   </header>
 
   <nav>
-    <a href="cu_later_homepage_wireframe.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="#order">Order</a>
     <a href="https://www.instagram.com/c.u_later_cafe" target="_blank">Instagram</a>
-    <a href="cu_later_contact_wireframe.html">Contact</a>
+    <a href="contact.html">Contact</a>
   </nav>
 
   <div class="language-toggle">
